--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1"
     />
+    <meta name="description" content="Farang E-Commerce Pet-Project" />
     <link rel="icon" href="favicon.ico" />
     <link
       rel="preload"
@@ -18,8 +19,13 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,700&display=swap"
     />
     <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"
+      as="style"
+    />
+    <link
       rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"
     />
     <title>Farang E-Commerce</title>
   </head>
